--- a/about2.html
+++ b/about2.html
@@ -22,8 +22,8 @@ The rise of gaming as a source of income has opened up new opportunities for peo
    <footer><a href="Contact Form.html" target="_blank">Contact Your Favourite Creators</a></footer>
    <br>
    <audio controls autoplay >
-    <source src="videoplayback (1).mp4" type="audio/ogg">
-    <source src="videoplayback (1).mp4" type="audio/mpeg">
+    <source src="videoplayback.mp4" type="audio/ogg">
+    <source src="videoplayback.mp4" type="audio/mpeg">
 </audio>
 </body>
 </html>
