--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
     </ul>
     <h1><a href="about2.html" target="_blank">Here Are Some Reasons To Play Games</a></h1>
     <audio controls autoplay >
-        <source src="videoplayback (1).mp4" type="audio/ogg">
-        <source src="videoplayback (1).mp4" type="audio/mpeg">
+        <source src="videoplayback.mp4" type="audio/ogg">
+        <source src="videoplayback.mp4" type="audio/mpeg">
     </audio>
 </body>
 </html>
