--- a/about2.html
+++ b/about2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Reason People Play Video Games</title>
+    <title>How to Use My HandFan</title>
      <link rel="stylesheet" href="about2.css">
      <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,18 +12,19 @@
 
 </head>
 <body>
-    <div><section><h1>Main Reason Why People Play Video Games</h1></section></div>
+    <div><section><h1>How to Use My HandFan</h1></section></div>
 
     <div id="box">
-        <img src="Screenshot 2025-02-19 9.09.58 PM.png" alt="">
-        <p>When people play games like Genshin Impact, Fortnite, or Minecraft with the aim of earning money, it often revolves around finding ways to monetize their gameplay or skills. Many gamers see an opportunity to generate income through streaming platforms like Twitch or YouTube, where they can build a following and earn revenue from ads, donations, or subscriptions. For example, Fortnite has a massive esports scene, where skilled players can compete in tournaments for cash prizes. Similarly, Minecraft's vast community of creators allows players to make money by selling custom maps, skins, or mods, or by running servers that attract paying users.
-The rise of gaming as a source of income has opened up new opportunities for people to view their hobby not just as entertainment, but as a way to make money, whether through direct competitions, content creation, or by leveraging in-game assets for real-world profits.</p>
+        <h3>Video of My Fan in Use</h3>
+        <p><video src="images/20250610_151335.mp4" controls width="500" height="600" volume="0" controls autoplay controls loop></video></p>
+        <p>Using my device is really easy. To turn it on, just push the joystick forward. This will start the device and get it running. <br> When you're done and want to stop it, pull the joystick backward, and the device will turn off. There's also a small red light on the top of the device that helps you know if it's on or off. <br> When the red light is on, that means the device is running.  If the light is off, the device is not on. It’s a simple way to make sure you always know what’s going on with the device. One of the challenges I faced whilst making my device was the wires would always fall out. <br> I even tried to hold down the fan with tape but when I was trying to fix the wires,the tape pulled the whole wires out. So I had to rewire the whole thing. <br> Another challenge was when I was making sure the joystick, lightbulb and DC motor were connected to my project, the DC motor was unable to connect at the bottom. So I had to use tape instead. Something I would use differently would be, possibly using a remote, <br> or using a different type of sticky tack to connecct my fan.
+</p>
 </div>
-   <footer><a href="Contact Form.html" target="_blank">Contact Your Favourite Creators</a></footer>
+   
    <br>
    <audio controls autoplay >
-    <source src="videoplayback.mp4" type="audio/ogg">
-    <source src="videoplayback.mp4" type="audio/mpeg">
+    <source src="videoplayback (1).mp4" type="audio/ogg">
+    <source src="videoplayback (1).mp4" type="audio/mpeg">
 </audio>
 </body>
 </html>
